# quick-charts

./: CMakeLists.txt  conanfile.py  info.json
controls/: CMakeLists.txt
examples/minimal/: CMakeLists.txt  main.cpp  main.qml
src/: CMakeLists.txt
src/scenegraph/: LineChartMaterial.cpp  LineChartMaterial.h  LineChartNode.cpp  LineChartNode.h  LineSegmentNode.cpp
src/shaders/: CMakeLists.txt  linechart.frag  linechart.vert  piechart.frag  piechart.vert  sdf.glsl
